<resources>
    <string name="app_name">Anthem Companion</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_ad">AdActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="large_text">
        "Coming Soon...\n\n"

    </string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_javelin1">JavelinActivity1</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="Melee_Shock_des">"Drop into battle with a \n hand-held lightning stick for \n an electrifying melee fight."</string>
    <string name="Ranger_Ulti_des">"Unload on your enemies \nwith a volley of missiles\n that can lock onto\n dozens of moving targets\n at once."</string>
    <string name="ranger_des">" \nPiloted by both Freelancers and Sentinels, this iconic suit\'s versatility is what makes it deadly.\n\n With strong offensive capabilities, respectable defense, and something in its arsenal for every situation, the Ranger is the jack-of-all-trades your squad needs."</string>
    <string name="storm_dec"> \nThe Storm channels the raw energy of the Anthem through its seals to hover over the battlefield and dish out damage.\n\n With its powerful seals and minimal armour, the Storm is a tempestuous javelin that can challenge the skills of even a veteran lancer.</string>
    <string name="focus_seal_des">"Blast frozen shards that slowly\n freeze whatever they hit to put\n your opponents on ice."</string>
    <string name="storm_ulti">"Calling down a torrent of \nenergy, the Storm decimates a\n targeted area – and any foes \nunlucky enough to be standing\n in it."</string>
    <string name="flame_thrower_des">Scorch everything in your path with a stream of fire.</string>
    <string name="ordnance_des">Launch an explosive projectile to devastate an area and every enemy inside of it.</string>
    <string name="inter_sup_system_des">Make one of your enemies an easy target by increasing the damage your allies do to them.</string>
    <string name="inter_assault_system_des">Have your enemies feeling the burn with a well-placed bomb that explodes in a burst of acid.</string>
    <string name="colossus_des"> \nIf you think subtlety is overrated and want enough artillery to take out a small army, unleash the pure devastation of this hulking war machine. \n\n While each javelin can equip two weapons, the Colossus is the only javelin sturdy enough to wield any of the Heavy Weapons.</string>
    <string name="interceptor_des"> \nThe Interceptor excels in getting close to deal damage to enemies, then dashing away before they can react. \n\nUnleashing lightning-fast maneuverability to pull off powerful offensive abilities, the Interceptor makes the impossible look easy.</string>
    <string name="created_by">Created By:</string>
    <string name="claim_1">  This app is not affiliated with Electronic Arts Inc. \"EA\" or Bioware. The app is a fan project developed by \"Ali HammouD\".</string>
    <string name="claim_2">  Materials used are from the \'Anthem Fan Art Kit\', which is provided by Electronic Arts Inc. \"EA\".\n\n  All rights in the Fan Art Kit belong to Electronic Arts Inc. \"EA\", its affiliated companies or licensor.</string>
    <string name="spec_thanks">  Special thanks for our graphic designers \"Ali Termos\" and \"Ethan Bridger\" for their efforts and help.</string>
    <string name="ultimate_ability_colossus">Ultimate Ability:</string>
    <string name="siege_cannon">Siege Cannon</string>
    <string name="heavy_smash">Heavy Smash</string>
    <string name="melee_ability_colossus">Melee Ability:</string>
    <string name="colossus_javelin_gear">COLOSSUS JAVELIN GEAR</string>
    <string name="ordnance_launcher">Ordnance Launcher:</string>
    <string name="high_explosive_mortar">High Explosive Mortar</string>
    <string name="burst_mortar">Burst Mortar</string>
    <string name="firewall_mortar">Firewall Mortar</string>
    <string name="lightning_coil">Lightning Coil</string>
    <string name="heavy_assault_launcher">Heavy Assault Launcher:</string>
    <string name="siege_artillery">Siege Artillery</string>
    <string name="flamethrower">Flamethrower</string>
    <string name="flak_cannon">Flak Cannon</string>
    <string name="railgun">Railgun</string>
    <string name="venom_spitter">Venom Spitter</string>
    <string name="colossus_javelin_abilities">COLOSSUS JAVELIN ABILITIES</string>
    <string name="shield_pulse">Shield Pulse</string>
    <string name="battle_cry">Battle Cry</string>
    <string name="support_gear">Support Gear:</string>
    <string name="shock_coil">Shock Coil</string>
    <string name="todo">TODO</string>
    <string name="glacial_spear">Glacial Spear</string>
    <string name="support_seals">Support Seals:</string>
    <string name="shock_burst">Shock Burst</string>
    <string name="frost_shards">Frost Shards</string>
    <string name="lightning_strike">Lightning Strike</string>
    <string name="living_flame">Living Flame</string>
    <string name="flame_burst">Flame Burst</string>
    <string name="ice_blast">Ice Blast</string>
    <string name="blast_seals">Blast Seals:</string>
    <string name="storm_javelin_gear">STORM JAVELIN GEAR</string>
    <string name="elemental_storm">Elemental Storm</string>
    <string name="fiery_strike">Fiery Strike</string>
    <string name="melee_ability_storm">Melee Ability</string>
    <string name="storm_javelin_abilities">STORM JAVELIN ABILITIES</string>
    <string name="focus_seals">Focus Seals:</string>
    <string name="arc_burst">Arc Burst</string>
    <string name="burning_orb">Burning Orb</string>
    <string name="wind_wall">Wind Wall</string>
    <string name="quickening_field">Quickening Field</string>
    <string name="ice_storm">Ice Storm</string>
    <string name="ultimate_ability_storm">Ultimate Ability</string>
    <string name="interceptor_javelin_abilities">INTERCEPTOR JAVELIN ABILITIES</string>
    <string name="wraith_strike">Wraith Strike</string>
    <string name="venom_spray">Venom Spray</string>
    <string name="detonating_strike">Detonating Strike</string>
    <string name="strike_systems">Strike Systems:</string>
    <string name="spark_dash">Spark Dash</string>
    <string name="cryo_glaive">Cryo Glaive</string>
    <string name="venom_bomb">Venom Bomb</string>
    <string name="assassin_s_blades">Assassin\'s Blades</string>
    <string name="interceptor_javelin_gear">INTERCEPTOR JAVELIN GEAR</string>
    <string name="searching_glaive">Searching Glaive</string>
    <string name="cluster_mine">Cluster Mine</string>
    <string name="bladed_daggers">Bladed Daggers</string>
    <string name="melee_ability_interceptor">Melee Ability</string>
    <string name="ultimate_ability_interceptor">Ultimate Ability</string>
    <string name="assault_systems">Assault Systems:</string>
    <string name="plasma_star">Plasma Star</string>
    <string name="tempest_strike">Tempest Strike</string>
    <string name="support_systems">Support Systems:</string>
    <string name="target_beacon">Target Beacon</string>
    <string name="rally_cry">Rally Cry</string>
    <string name="grenade_gear">Grenade Gear:</string>
    <string name="spark_beam">Spark Beam</string>
    <string name="pulse_blast">Pulse Blast</string>
    <string name="assault_launcher">Assault Launcher:</string>
    <string name="sticky_grenade">Sticky Grenade</string>
    <string name="seeker_grenades">Seeker Grenades</string>
    <string name="inferno_grenade">Inferno Grenade</string>
    <string name="frag_grenade">Frag Grenade</string>
    <string name="ranger_javelin_gear">RANGER JAVELIN GEAR</string>
    <string name="multi_target_missile_battery">Multi-Target Missile Battery</string>
    <string name="shock_mace">Shock Mace</string>
    <string name="melee_ability_ranger">Melee Ability</string>
    <string name="ultimate_ability_ranger">Ultimate Ability</string>
    <string name="ranger_javelin_abilities">RANGER JAVELIN ABILITIES</string>
    <string name="frost_grenade">Frost Grenade</string>
    <string name="seeking_missile">Seeking Missile</string>
    <string name="venom_darts">Venom Darts</string>
    <string name="blast_missile">Blast Missile</string>
    <string name="bulwark_point">Bulwark Point</string>
    <string name="muster_point">Muster Point</string>
    <string name="creatures_description"> In this page, we will list all the creatures that exist in Anthem. Each creature will have a description that reveals its weaknesses, and indicates how much XP and Gold will be rewarded upon killing it. In addition, we will provide the potential loot drops.</string>
    <string name="wallpaper_description"> We are working on collecting a various amount of beautiful high quality wallpapers to display your phone!</string>
    <string name="cortex_description"> In the Cortex, we will provide a collection of information regarding the world of Anthem.</string>
    <string name="stronghold_description"> Here we will provide an overview of all the active Strongholds, help you engage them, and show you what loot to expect from each. </string>
    <string name="crafting_description"> In the Crafting page, detailed descriptions about each material will be provided. We will help you gather the right resources to craft the item in mind.</string>
    <string name="login">LogIn</string>
    <string name="login_button">Coming Soon</string>
    <string name="home_description"> On this page, you may be able to login using your EA account to check your in-game stats and progress. Depending on the Api BioWare is going to provide, you will also be able to view a 3D model of your javelins and even customize them!</string>
    <string name="header_title">Anthem Companion</string>

</resources>
