<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/custom_bar"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:background="@drawable/test2"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="About"
            app:titleTextColor="@color/white" />


        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/custom_bar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="0dp">


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:text="@string/created_by"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/potato_sack_logo_name"
                    android:contentDescription="@string/spec_thanks" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/Twitter"
                        android:layout_width="40dp"
                        android:layout_height="58dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/twitter" />

                    <Button
                        android:id="@+id/Facebook"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/fb_logo" />

                    <Button
                        android:id="@+id/Reddit"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/reddit" />

                    <Button
                        android:id="@+id/Discord"
                        android:layout_width="40dp"
                        android:layout_height="60dp"
                        android:layout_marginEnd="15dp"
                        android:layout_weight="1"
                        android:background="@drawable/discord" />
                </LinearLayout>


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/claim_1"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/claim_2"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="25dp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginEnd="50dp"
                    android:text="@string/spec_thanks"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="55dp" />


            </LinearLayout>


        </ScrollView>

    </RelativeLayout>


</android.support.v4.widget.DrawerLayout>